HBASE-26483. openFile() and createFile()
adds a hadoop-3.3 source tree, where the production source implements the new methods
in a subclass of HBaseObjectStoreSemantics called HBase33ObjectStoreSemantics.
(obviously, applications will need to bind to this for the semantics)

Maven only adds the new source to the build with the hadoop3.3 profile.

How the existing tests bind to the store is made configurable in XML, and
will switch on hadoop 3.3 test runs to the new class throughout the contract
tests. This ensures that tests of the relevant APIs through the contract tests
are done.

There's a new test TestCreateFile to test the api and verify that the streams
returned by the builders are locking and exclusive.

This test is failing. Locking streams are coming back, but there's no
conflict between the two streams.

Change-Id: I2a4ba8116aee293e6fccac752143511cf0eb8883

--- a/hbase-oss/pom.xml
+++ b/hbase-oss/pom.xml
@@ -93,6 +93,43 @@
           <version>${project.version}</version>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <!--
+          Add the hadoop 3.3+ main and test source trees to the build.
+          -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>hadoop-33-src/main/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+              <execution>
+                <id>add-test-source</id>
+                <phase>generate-test-sources</phase>
+                <goals>
+                  <goal>add-test-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>hadoop-33-src/test/java</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>hadoop-default</id>
