HBASE-26483. validating against hadoop 3.3.3
making sure this works with the 3.3.3 rc.

the createFile() test (now renamed TestCreateFileBuilder for clarity)
is still failing as the lock isn't working.

assumption: steve still learning

once this in, i will add openfile

Change-Id: I569299f6fa518e14242dd760a808ec6342405ebe

--- a/hbase-oss/src/test/resources/log4j.properties
+++ b/hbase-oss/src/test/resources/log4j.properties
@@ -19,3 +19,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c{2} (%F:%
 log4j.logger.org.apache.hadoop=DEBUG
 log4j.logger.org.apache.hadoop.metrics2=WARN
 log4j.logger.org.apache.hadoop.fs=WARN
+log4j.org.apache.hadoop.util.Shell=WARN
+log4j.logger.org.apache.hadoop.fs.s3a=INFO
